<resources>
    <string name="app_name">Finance Go</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="character_model">Character model</string>
    <string name="inventory">INVENTORY</string>
    <string name="rewards">REWARDS</string>
    <string name="home_logo_icon">Home Logo Icon</string>
    <string name="hp_icon">HP Icon</string>
    <string name="hp_text">HP: 50</string>
    <string name="helmet_icon">Helmet Icon</string>
    <string name="protect_10">PROTECT: 10</string>
    <string name="sword_icon">Sword Icon</string>
    <string name="attack_10">ATTACK: 10</string>
    <string name="armor_icon">Armor Icon</string>
    <string name="defense_10">DEFENSE: 10</string>
    <string name="pants_icon">Pants Icon</string>
    <string name="armor_player_icon">Armor Player Icon</string>
    <string name="pants_player_icon">Pants Player Icon</string>
    <string name="helmet_player_icon">Helmet Player Icon</string>
    <string name="helmets">HELMETS</string>
    <string name="helmet_1">Helmet 1</string>
    <string name="helmet_2">Helmet 2</string>
    <string name="chest_armor">CHEST ARMOR</string>
    <string name="chest_armor_1">Chest Armor 1</string>
    <string name="chest_armor_2">Chest Armor 2</string>
    <string name="pants">PANTS</string>
    <string name="pants_1">Pants 1</string>
    <string name="pants_2">Pants 2</string>
    <string name="weapons">WEAPONS</string>
    <string name="weapon_1">Weapon 1</string>
    <string name="hello">Welcome!</string>
    <string name="LOCKED">LOCKED</string>
    <string name="UNLOCK">UNLOCK</string>
    <string name="UnlockableAward">Unlockable Award</string>
    <string name="UnlockableAwardImage">Unlockable Award Image</string>
    <string name="redarmor"><b>Red Armor</b></string>
    <string name="redpants"><b>Red Pants</b></string>
    <string name="redhelmet"><b>Red Helmet</b></string>
    <string name="lockedReward1Text"><b>Open a CD savings account</b>\nWhat is a CD Savings Account?\nA Certificate of Deposit is a type of savings account that lets you earn more interest on your money than a regular savings account. When you open a CD, you agree to keep your money in the account for a specific period, like 6 months. In return, the bank pays you a higher interest rate, so your money grows faster. However, you can not take out the money during that period without paying a penalty. CDs are a safe way to save if you do not need immediate access to your money and want to earn a bit more.</string>
    <string name="youAreNotReady">Will be earnable with future tasks.</string>
    <string name="lockedReward2Text"><b>Open a Stock Market Account</b>\nWhat is a Stock Market Account?\nA stock market account, often referred to as a brokerage account, is a financial account that allows individuals to buy, sell, and hold shares of publicly traded companies. It serves as a platform for investors to trade stocks, bonds, exchange-traded funds (ETFs), and other investment products. When you open a stock market account, you can invest your money in the stock market, aiming to grow your wealth over time.</string>
    <string name="lockedReward3Text"><b>Add $1,000 to your savings account</b>\nWhy add $1,000?\nAdding $1,000 to your savings is a smart way to boost financial security and build a safety net for emergencies or future goals. This deposit can grow with interest, improve your money management habits, and provide peace of mind for both short- and long-term needs.</string>
    <string name="helpdocumentationText">Contributors:\nRuben Rodriguez (Team Captain), Winston Shih, Syed Shah, Neil Dasari\n\nPurpose: This game is supposed to teach young adults (aged 18–30) financial literacy lessons through an engaging gamified app that rewards them for completing financially responsible goals and applying those concepts in real life.</string>
    <string name="tasks">Task 1 (Simple Task): Completing financial goals listed in main game page\nUsers will be presented with a list of financial goals on the main game page. They can select and complete these goals (e.g., closing a subscription, making a savings account, or add $20 to that savings account). Once they complete all goals, the user can claim a special diamond sword.\n\nTask 2 (Moderate Task): Set up specific rewards for accomplishing financial tasks.\nEvery time a task is complete the main game page, main character stats, and inventory page is updated with the reward equipped (e.g., diamond helmet, diamond chest armor, diamond pants).\n\nTask 3 (Complex Task): Create an upgrade system for stats and armor.\nEquip different types of armor to adjust your avatar’s stats and refine its appearance, experimenting with unique looks and stat combinations to personalize your character.</string>
    <string name="instructions">1. You either sign up for a new account or login with an existing account.\n\n2. You input your income, expenses, and subscriptions before you can move onto main game page (input 0 if you do not have a specific expense).\n\n3. If you want to edit your financial information, you can click on the edit info button on main game or task history page.\n\n4. You have to complete given tasks in task section of main game page in order from top to bottom.\n\n5. Every time you complete a task the reward is automatically equipped to your avatar.\n\n6. You can customize your avatar with the default armors and armors you unlocked.\n\n7. You can click on your avatar in main game page and task history page to access the main character stats page to check stats of your avatar’s customizable layout.\n\n8. Once player completes all tasks in main game page, they can unlock the sword reward in reward page.\n\n9. After completing all tasks, you can view and equip armors in inventory page.</string>
</resources>